--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="device-width=device,user-scalable=no">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Comenzando con la fotografía</title>
   </head>
   <body>
+
+    <div class="contenedor">
+
+      <header>
+        <div id="nombredelsitio">
+          Comenzando con la fotografía
+        </div>
+
+        <nav id="menudenavegacion">
+          <a href="#" class="item1">Inicio</a>
+          <a href="#" class="item2">Paisajes</a>
+          <a href="#" class="item3">Retratos</a>
+        </nav>
+      </header>
+
+      <div class="main">
+
+
+    </div>
+
+    <footer>
+    </footer>
 
   </body>
 </html>
