Se agregó "imagen central" e "imagenes secundarias" Modificacion del nombre "contenedor" a contenido.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div class="contenedor">
+    <div class="contenido">
 
       <header>
         <div id="nombredelsitio">
@@ -25,8 +25,20 @@
 
       <div class="main">
 
+        <section id="imagencentral">
+          <img src="images\imagencentral01.jpeg" alt="imagencentral">
+        </section>
 
-    </div>
+        <section id="imagensecundaria">
+          <div class="izquierda">
+            <img src="images\imagensecundaria01.jpg" class="secundaria" alt="secundaria01"/>
+          </div>
+
+          <div class="derecha">
+            <img src="images\imagensecundaria02.jpg" class="secundaria" alt="secundaria02"/>
+          </div>
+        </section>
+      </div>
 
     <footer>
     </footer>
