Incorporación de enlaces a las imagenes secundarias. Cambio de imagen por una que represente mejor a la pagina de destino.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
 
         <section id="imagensecundaria">
           <div class="izquierda">
-            <img src="images\imagensecundaria01.jpg" class="secundaria" alt="secundaria01"/>
+            <a href="paisajes\paisajes.html">
+              <img src="images\imagensecundaria01.jpg" class="secundaria" alt="secundaria01"/>
+            </a>
           </div>
 
           <div class="derecha">
-            <img src="images\imagensecundaria02.jpg" class="secundaria" alt="secundaria02"/>
+            <a href="retratos\retratos.html">
+              <img src="images\imagensecundaria02.jpg" class="secundaria" alt="secundaria02"/>
+            </a>
           </div>
         </section>
       </div>
