Se enlazó la barra de navegación.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
 
         <nav id="menudenavegacion">
-          <a href="#" class="item1">Inicio</a>
-          <a href="#" class="item2">Paisajes</a>
-          <a href="#" class="item3">Retratos</a>
+          <a href="index.html" class="item1">Inicio</a>
+          <a href="paisajes/paisajes.html" class="item2">Paisajes</a>
+          <a href="retratos/retratos.html" class="item3">Retratos</a>
         </nav>
       </header>
 
