Desarrollo del footer. Se agregaron las secciones "contacto", "politicas", "social" y "derechos".

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
 
         <nav id="menudenavegacion">
-          <a href="index.html" class="item1">Inicio</a>
-          <a href="paisajes/paisajes.html" class="item2">Paisajes</a>
-          <a href="retratos/retratos.html" class="item3">Retratos</a>
+          <a href="index.html" class="linknav">Inicio</a>
+          <a href="paisajes/paisajes.html" class="linknav">Paisajes</a>
+          <a href="retratos/retratos.html" class="linknav">Retratos</a>
         </nav>
       </header>
 
@@ -45,6 +45,39 @@
       </div>
 
     <footer>
+
+      <div class="contacto">
+        <ul>
+          <h2>Contacto</h2>
+            <li><a href="mailto:wingeyer.alex@outlook.com?subject=feedback" class="link">Envíanos un mail.</a></li>
+            <li><a>Chacabuco 1234 - Rqta. (SF).</a></li>
+            <li><a href="tel:5403482422228+" class="link">(03482) 42-2228.</a></li>
+        </ul>
+      </div>
+
+      <div class="politicas">
+        <ul>
+          <h2>Términos y condiciones.</h2>
+            <li><a href="#" class="link">Ver Términos y condiciones.</a></li>
+        </ul>
+      </div>
+
+      <div class="social">
+        <ul>
+          <h2>Redes sociales.</h2>
+            <li><a href="https://www.facebook.com/" class="link">ComenzandoFotografia</a></li>
+            <li><a href="https://twitter.com/" class="link">@comenzandofotografia</a></li>
+            <li><a href="https://www.instagram.com/" class="link">ComenzandoFotografia</a></li>
+        </ul>
+      </div>
+
+      <div class="derechos">
+        <ul>
+          <h2>Derechos.</h2>
+            <li>© Alex Wingeyer - 2017.</li>
+        </ul>
+      </div>
+
     </footer>
 
   </body>
