Desarrollo de los "terminos y condiciones".

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="politicas">
         <ul>
           <h2>Términos y condiciones.</h2>
-            <li><a href="#" class="link">Ver Términos y condiciones.</a></li>
+            <li><a href="terminosycondiciones/terminosycondiciones.html" class="link">Ver Términos y condiciones.</a></li>
         </ul>
       </div>
 
