Unifiación del ID del div en el header.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="contenido">
 
       <header>
-        <div id="nombredelsitio">
+        <div id="encabezado">
           Comenzando con la fotografía
         </div>
 
@@ -42,6 +42,7 @@
             </a>
           </div>
         </section>
+
       </div>
 
     <footer>
@@ -79,6 +80,8 @@
       </div>
 
     </footer>
+
+    </div>
 
   </body>
 </html>
