Agregado de imagenes de paisajes.

--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -23,31 +23,35 @@
         </nav>
       </header>
 
-      <div class="main">
+      <div class="main" id="mainpaisajes">
 
-        <section id="paisaje01">
+      <div class="fila01">
+        <section class="imagenpaisaje" id="paisaje01">
           <img src="../images/paisaje01.jpg">
         </section>
 
-        <section id="paisaje02">
+        <section class="imagenpaisaje">
           <img src="../images/paisaje02.jpg">
         </section>
 
-        <section id="paisaje03">
+        <section class="imagenpaisaje">
           <img src="../images/paisaje03.jpg">
         </section>
+      </div>
 
-        <section id="paisaje04">
+      <div class="fila02">
+        <section class="imagenpaisaje">
           <img src="../images/paisaje04.jpg">
         </section>
 
-        <section id="paisaje05">
+        <section class="imagenpaisaje">
           <img src="../images/paisaje05.jpg">
         </section>
 
-        <section id="paisaje06">
+        <section class="imagenpaisaje">
           <img src="../images/paisaje06.jpg">
         </section>
+      </div>
 
       </div>
 
@@ -55,7 +59,7 @@
 
         <div class="contacto">
           <ul>
-            <h2>Contacto</h2>
+            <h2>Contacto.</h2>
               <li><a href="mailto:wingeyer.alex@outlook.com?subject=feedback" class="link">Envíanos un mail.</a></li>
               <li><a>Chacabuco 1234 - Rqta. (SF).</a></li>
               <li><a href="tel:5403482422228+" class="link">(03482) 42-2228.</a></li>
