Aplicación de filtros a imágenes de paisajes.

--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -30,25 +30,25 @@
           <img src="../images/paisaje01.jpg">
         </section>
 
-        <section class="imagenpaisaje">
+        <section class="imagenpaisaje" id="paisaje02">
           <img src="../images/paisaje02.jpg">
         </section>
 
-        <section class="imagenpaisaje">
+        <section class="imagenpaisaje" id="paisaje03">
           <img src="../images/paisaje03.jpg">
         </section>
       </div>
 
       <div class="fila02">
-        <section class="imagenpaisaje">
+        <section class="imagenpaisaje" id="paisaje04">
           <img src="../images/paisaje04.jpg">
         </section>
 
-        <section class="imagenpaisaje">
+        <section class="imagenpaisaje" id="paisaje05">
           <img src="../images/paisaje05.jpg">
         </section>
 
-        <section class="imagenpaisaje">
+        <section class="imagenpaisaje" id="paisaje06">
           <img src="../images/paisaje06.jpg">
         </section>
       </div>
