--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -23,7 +23,35 @@
         </nav>
       </header>
 
-      <div class="main">
+      <div class="main" id="mainretratos">
+
+        <div class="fila01">
+          <section class="imagenpaisaje" id="retrato01">
+            <img src="../images/retrato01.jpg">
+          </section>
+
+          <section class="imagenpaisaje" id="retrato02">
+            <img src="../images/retrato02.jpg">
+          </section>
+
+          <section class="imagenpaisaje" id="retrato03">
+            <img src="../images/retrato03.jpg">
+          </section>
+        </div>
+
+        <div class="fila02">
+          <section class="imagenpaisaje" id="retrato04">
+            <img src="../images/retrato04.jpg">
+          </section>
+
+          <section class="imagenpaisaje" id="retrato05">
+            <img src="../images/retrato05.jpg">
+          </section>
+
+          <section class="imagenpaisaje" id="retrato06">
+            <img src="../images/retrato06.jpg">
+          </section>
+        </div>
 
       </div>
 
