Animación "Slide in" al contenido de retratos.html.

--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Comenzando con los retratos</title>
+    <style media="screen">
+      .contenido {
+        animation: slidein 1.5s;
+      }
+    </style>
   </head>
   <body>
 
