Incorporación de la sombra y animación a "Términos y condiciones".

--- a/terminosycondiciones/terminosycondiciones.html
+++ b/terminosycondiciones/terminosycondiciones.html
@@ -5,13 +5,18 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Términos y condiciones del sitio.</title>
+    <style media="screen">
+      .contenido {
+        animation: slidein 1.5s;
+      }
+    </style>
   </head>
   <body>
 
     <div class="contenido">
       <header>
-        <div id="nombredelsitio">
-          Comenzando con la fotografía
+        <div id="encabezado">
+          Términos y condiciones del sitio
         </div>
 
         <nav id="menudenavegacion">
@@ -23,7 +28,6 @@
 
       <article class="terminosycondiciones">
 
-        <h1 class="tituloterminos">TÉRMINOS Y CONDICIONES DEL SITIO:</h1>
         <ol>
 
           <li>Introducción.</li><br>
