Incorporación de los media queries. Cambios varios en flex, márgenes, ancho del encabezado, corrección del centrado del encabezado.

--- a/index.html
+++ b/index.html
@@ -52,14 +52,7 @@
           <h2>Contacto</h2>
             <li><a href="mailto:wingeyer.alex@outlook.com?subject=feedback" class="link">Envíanos un mail.</a></li>
             <li><a>Chacabuco 1234 - Rqta. (SF).</a></li>
-            <li><a href="tel:5403482422228+" class="link">(03482) 42-2228.</a></li>
-        </ul>
-      </div>
-
-      <div class="politicas">
-        <ul>
-          <h2>Términos y condiciones.</h2>
-            <li><a href="terminosycondiciones/terminosycondiciones.html" class="link">Ver Términos y condiciones.</a></li>
+            <li><a href="tel:+5403482422228" class="link">(03482) 42-2228.</a></li>
         </ul>
       </div>
 
@@ -76,6 +69,13 @@
         <ul>
           <h2>Derechos.</h2>
             <li>© Alex Wingeyer - 2017.</li>
+        </ul>
+      </div>
+
+      <div class="politicas">
+        <ul>
+          <h2>Términos y condiciones.</h2>
+            <li><a href="terminosycondiciones/terminosycondiciones.html" class="link">Ver Términos y condiciones.</a></li>
         </ul>
       </div>
 
