--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -31,29 +31,29 @@
       <div class="main" id="mainretratos">
 
         <div class="fila01">
-          <section class="imagenpaisaje" id="retrato01">
+          <section class="imagenretrato" id="retrato01">
             <img src="../images/retrato01.jpg">
           </section>
 
-          <section class="imagenpaisaje" id="retrato02">
+          <section class="imagenretrato" id="retrato02">
             <img src="../images/retrato02.jpg">
           </section>
 
-          <section class="imagenpaisaje" id="retrato03">
+          <section class="imagenretrato" id="retrato03">
             <img src="../images/retrato03.jpg">
           </section>
         </div>
 
         <div class="fila02">
-          <section class="imagenpaisaje" id="retrato04">
+          <section class="imagenretrato" id="retrato04">
             <img src="../images/retrato04.jpg">
           </section>
 
-          <section class="imagenpaisaje" id="retrato05">
+          <section class="imagenretrato" id="retrato05">
             <img src="../images/retrato05.jpg">
           </section>
 
-          <section class="imagenpaisaje" id="retrato06">
+          <section class="imagenretrato" id="retrato06">
             <img src="../images/retrato06.jpg">
           </section>
         </div>
@@ -67,14 +67,7 @@
             <h2>Contacto</h2>
               <li><a href="mailto:wingeyer.alex@outlook.com?subject=feedback" class="link">Envíanos un mail.</a></li>
               <li><a>Chacabuco 1234 - Rqta. (SF).</a></li>
-              <li><a href="tel:5403482422228+" class="link">(03482) 42-2228.</a></li>
-          </ul>
-        </div>
-
-        <div class="politicas">
-          <ul>
-            <h2>Términos y condiciones.</h2>
-              <li><a href="../terminosycondiciones/terminosycondiciones.html" class="link">Ver Términos y condiciones.</a></li>
+              <li><a href="tel:+5403482422228" class="link">(03482) 42-2228.</a></li>
           </ul>
         </div>
 
@@ -91,6 +84,13 @@
           <ul>
             <h2>Derechos.</h2>
               <li>© Alex Wingeyer - 2017.</li>
+          </ul>
+        </div>
+
+        <div class="politicas">
+          <ul>
+            <h2>Términos y condiciones.</h2>
+              <li><a href="../terminosycondiciones/terminosycondiciones.html" class="link">Ver Términos y condiciones.</a></li>
           </ul>
         </div>
 
