Se incorporaron las viñetas al div "Social".

--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -74,9 +74,9 @@
         <div class="social">
           <ul>
             <h2>Redes sociales.</h2>
-              <li><a href="https://www.facebook.com/" class="link">ComenzandoFotografia</a></li>
-              <li><a href="https://twitter.com/" class="link">@comenzandofotografia</a></li>
-              <li><a href="https://www.instagram.com/" class="link">ComenzandoFotografia</a></li>
+              <li id="fbicon"><a href="https://www.facebook.com/" class="link">ComenzandoFotografia</a></li>
+              <li id="twicon"><a href="https://twitter.com/" class="link">@comenzandofotografia</a></li>
+              <li id="igicon"><a href="https://www.instagram.com/" class="link">ComenzandoFotografia</a></li>
           </ul>
         </div>
 
