--- a/terminosycondiciones/terminosycondiciones.html
+++ b/terminosycondiciones/terminosycondiciones.html
@@ -83,9 +83,9 @@ Las presentes condiciones se rigen y se interpretan de acuerdo con las Leyes de 
       <div class="social">
         <ul>
           <h2>Redes sociales.</h2>
-            <li><a href="https://www.facebook.com/" class="link">ComenzandoFotografia</a></li>
-            <li><a href="https://twitter.com/" class="link">@comenzandofotografia</a></li>
-            <li><a href="https://www.instagram.com/" class="link">ComenzandoFotografia</a></li>
+            <li id="fbicon"><a href="https://www.facebook.com/" class="link">ComenzandoFotografia</a></li>
+            <li id="twicon"><a href="https://twitter.com/" class="link">@comenzandofotografia</a></li>
+            <li id="igicon"><a href="https://www.instagram.com/" class="link">ComenzandoFotografia</a></li>
         </ul>
       </div>
 
