--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -74,9 +74,9 @@
         <div class="social">
           <ul>
             <h2>Redes sociales.</h2>
-              <li id="fbicon"><a href="https://www.facebook.com/" class="link">ComenzandoFotografia</a></li>
-              <li id="twicon"><a href="https://twitter.com/" class="link">@comenzandofotografia</a></li>
-              <li id="igicon"><a href="https://www.instagram.com/" class="link">ComenzandoFotografia</a></li>
+              <a href="https://www.facebook.com/" class="link"><li id="fbicon">ComenzandoFotografia</li></a>
+              <a href="https://twitter.com/" class="link"><li id="twicon">@comenzandofotografia</li></a>
+              <a href="https://www.instagram.com/" class="link"><li id="igicon">ComenzandoFotografia</li></a>
           </ul>
         </div>
 
